--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1154,5 +1154,6 @@
     </div>
 
     <script src="dist/js/main.min.js"></script>
+    <script src="/dist/js/App.js"></script>
   </body>
 </html>
