--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -99,9 +99,7 @@
                 </p>
                 <div class="hero-form field field-grouped is-revealing">
                   <div class="control">
-                    <a class="button button-primary button-block" href="#"
-                      >Connect Wallet</a
-                    >
+                    <button id="connect-button" class="button button-primary button-block">Connect Wallet</button>
                   </div>
                 </div>
               </div>
@@ -1157,3 +1155,7 @@
     <script src="/dist/js/App.js"></script>
   </body>
 </html>
+
+<script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.3.4/dist/web3.min.js"></script>
+<script src="./src/js/EventListener.js"></script>
+
